--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {margin: 0; padding: 0;}
 
 body{
-    background-color: rgb(150, 226, 240);
+    background-color: rgb(150, 226, 240);;
 }
 
 .content{
@@ -63,5 +63,11 @@ body{
     font-size: 27px;
     font-family: sans-serif;
     margin-top: 35px;
-    color: rgb(1, 1, 172);
+}
+
+#list{
+    text-align: center;
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 35px;
 }
